deployments/jenkins/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: master
  name: jenkins
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: master
